--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="row">
-    <button type="button" (click)="nodeGraphEditor.fnAddNewNode()">Add Node</button>
-</div>
-<app-node-graph-editor [data]="data" #nodeGraphEditor></app-node-graph-editor>
+<app-node-graph-editor [data]="data"></app-node-graph-editor>
 
