--- a/src/app/node-graph-editor/node-graph-editor.component.css
+++ b/src/app/node-graph-editor/node-graph-editor.component.css
@@ -1,3 +1,74 @@
+.wrapper {
+    min-height: 100vh;
+    background: #cccccc;
+    display: flex;
+    flex-direction: column;
+}
+
+.header, .footer {
+    height: 50px;
+    background: #666666;
+    color: #fff;
+}
+
+.header-title {
+    margin-top: 10px;
+    padding: 0 10px;
+}
+
+.footer-text {
+    text-align: center;
+}
+
+.content {
+    display: flex;
+    flex: 1;
+    background: #999999;
+    color: #000;
+}
+
+.columns {
+    display: flex;
+    flex: 1;
+}
+
+.main {
+    flex: 1;
+    order: 2;
+    background: #eeeeee;
+}
+
+.sidebar-first {
+    width: 20%;
+    background: #dddddd;
+    order: 1;
+}
+
+.sidebar-second {
+    width: 20%;
+    order: 3;
+    background: #dddddd;
+}
+
 .node-graph-editor {
-    height: 100%;
+    height: calc(100vh - 100px);
+}
+
+.btn-group button {
+    background-color: #cccccc;
+    border: 1px solid #666666;
+    color: #000000;
+    padding: 10px 24px;
+    cursor: pointer;
+    width: 100%;
+    display: block;
+}
+
+.btn-group button:not(:last-child) {
+    border-bottom: none;
+}
+
+.btn-group button:hover {
+    background-color: #999999;
+    color: #ffffff;
 }
