--- a/src/app/node-graph-editor/node-graph-editor.component.html
+++ b/src/app/node-graph-editor/node-graph-editor.component.html
@@ -7,7 +7,8 @@
             <aside class="sidebar-first">
                 <div class="btn-group">
                     <button (click)="fnAddNewNode()">Add Node</button>
-                    <button>Save Graph</button>
+                    <button (click)="fnSave(data)">Save Graph</button>
+                    <button (click)="fnClear()">Clear Graph</button>
                 </div>
             </aside>
             <main class="main">
